--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "typescript": "^4.3.5",
     "webpack": "^5.45.1",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.11.1"
   },
   "ts-standard": {
     "project": "./tsconfig.json"
@@ -37,7 +37,7 @@
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
-    "node-sass": "6.0.1",
+    "node-sass": "^8.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router-dom": "^6.3.0",
